--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:targetSdkVersion="23" />
 
     <uses-library android:name="httpclient-4.5.3.jar" />
-
     //for the map API
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -23,8 +22,6 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -32,13 +29,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>>
+        </activity>
+        >
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -54,12 +52,9 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-        </activity>
-
-        <activity android:name=".scan">
-
-        </activity>
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".scan" />
+        <activity android:name=".Terminal"></activity>
     </application>
 
 </manifest>
